# pytivometa

./: .gitignore  README.md  README.rst  cdata.pem  movie_data.py  pylintrc  pyproject.toml  pytivometa.py  pytivometathis.py  requirements.txt  rpcSearch102.py  rpcSearch102_Tivo-Mind-Query.py  rpcSearch102_pytivo_metagen.py  rpcSearch103.py  rpc_request.rst  rpc_search103.py  setup.cfg  setup.py  test_rpc.py  testcase.py  testcase1.py  testcase2.py  testcase3.py  tv_data.py  tvdb_api_v2.py
docs/: cdata.txt  changelog.md  movie_content_keys.txt  rpc_request.rst
pytivometa/: cdata.pem  cli.py  common.py  movie_data.py  pytivometa.py  rpc_search.py  rpc_search103.py  test_rpc.py  tv_data.py  tvdb_api_v2.py
src/pytivometa/: common.py  movie_data.py  pytivometa.py  rpc_search.py  test_rpc.py  tv_data.py  tvdb_api_v2.py
tests/meta_ref/: Friends.2004.4.29.mkv.txt  Friends.pytivometa  Raiders of the Lost Ark.m4v.txt  fleabag.pytivometa  fleabag.s01e03.m4v.txt  friends.s03e05.m4v.txt  hogans heroes.pytivometa  hogans_heroes_s2e9.m4v.txt
