[metadata]
name = pytivometa
version = 0.3.0
author = Matthew A. Clapp
author_email = Matther Clapp <itsayellow+dev@gmail.com>
description = Creates pytivo metadata for video files.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/itsayellow/pytivometa
keywords = pytivo
classifiers =
    Development Status :: 3 Beta
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.5
install_requires =
    IMDbPY>=6.5
zip_safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pytivometa = pytivometa.pytivometa:cli_start

[options.package_data]
* = *.pem
